# daylife

./: .gitignore  CLAUDE.md  README.md
daily-tracker/: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  IMPORT_REPORT.md  PROGRESS.md  README.md  _inspect.py  _inspect2.py  _inspect3.py  _inspect4.py  _inspect5.py  backup.py  classify_all.py  config.yaml  install_startup.py  mcp_setup.md  migrate_split_entries.py  pyproject.toml  requirements.txt  run_server.py  start.py  test_frontend.py
daily-tracker/desktop/: float.html  main.js  package-lock.json  package.json  panel.html  preload.js  start.bat
daily-tracker/desktop-tauri/: float.html  package-lock.json  package.json
daily-tracker/desktop-tauri/frontend/: panel.html
daily-tracker/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
daily-tracker/desktop-tauri/src-tauri/capabilities/: default.json
daily-tracker/desktop-tauri/src-tauri/src/: main.rs
daily-tracker/desktop/scripts/: copy-electron.js
daily-tracker/src/daylife/: __init__.py  __main__.py  config.py  tray.py
daily-tracker/src/daylife/api/: app.py  categories.py  entries.py  imports.py  main.py  stats.py
daily-tracker/src/daylife/cli/: commands.py
daily-tracker/src/daylife/core/: crud.py  database.py  entry_service.py  llm.py  models.py  schemas.py  service.py  stats_service.py
daily-tracker/src/daylife/importer/: __init__.py  __main__.py  base.py  color_parser.py  date_corrector.py  excel.py  excel_importer.py
daily-tracker/src/daylife/mcp/: __init__.py  __main__.py  (+2 more)
daily-tracker/src/web/: index.html  package.json  style.css  vite.config.js
daily-tracker/tests/: test_api.py  test_db.py  test_importer.py  test_models.py  test_service.py  test_services.py
(+15 files in other folders)
