[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daylife"
version = "0.1.0"
description = "个人每日活动记录与分析系统 - Local-first daily activity tracker"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "openpyxl>=3.1.0",
    "mcp>=1.0.0",
    "python-multipart>=0.0.9",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[project.scripts]
daily = "daylife.cli.commands:cli"
daylife = "daylife.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/daylife"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
