[package]
name = "daylife"
version = "0.1.0"
description = "DayLife Desktop - 个人每日活动记录系统"
authors = ["24kchengYe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"], default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
